test/fail/integration/_fail_sem_decl_funct_6.hs
x :: String -> Int
x y = 'c'
main = print "hello"
